<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dnkilic.testing.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/etName"
        android:layout_alignRight="@+id/etName"
        android:layout_alignEnd="@+id/etName"
        android:layout_marginTop="30dp"
        android:id="@+id/etSurname"
        android:hint="surname" />

    <Button
        android:text="CONCAT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:id="@+id/btnConcat"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnConcat"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:id="@+id/tvConcatResult" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:hint="name"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btnConcat"
        android:layout_toStartOf="@+id/btnConcat" />
</RelativeLayout>
